Alignment fixes.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -85,7 +85,7 @@ color: #000;
 	color:#000 !important;
 	border: 1px solid #cccccc !important;
     box-shadow: none !important;
-	border-radius:0px;
+	border-radius:4px;
 }
 .all-box-props{
 	background: #fff;
@@ -166,7 +166,7 @@ color: #000;
 	width: 20% !important;
     color: #000 !important;
     border: none !important;
-    border-radius: 2px !important;
+    border-radius: 4px !important;
     height: 32px !important;
     background: #fff !important;
     box-shadow: none !important;
@@ -519,4 +519,13 @@ input.middle:focus {
 }
 .build-view .build-chevron{
     margin-right:3.2em !important;
+}
+.pagination-btn-props{
+    background: #004073!important;
+    border: 1px solid #004073!important;
+    border-radius: 4px;
+    color: #fff;
+    width: 56px;
+    height: 29px;
+    font-size: 13px;
 }
