--- a/Hygieia_UI/UI/src/app/css/projectmapp.less
+++ b/Hygieia_UI/UI/src/app/css/projectmapp.less
@@ -59,7 +59,7 @@
     margin-top:9.7%;
     background: #004073 !important;
     border:1px solid #004073 !important;
-    border-radius: 2px !important;
+    border-radius: 4px !important;
 }
 .project-map-list-header{
     color: #1a1a1a;
